banner alignment fix

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,9 +1,10 @@
 .top-banner{
-    height: 500px;
-    padding: 4rem 0;
-    padding-top: 8rem;
+    margin: 10% 0 ;
+ 
+    
     
 }
+
 
 .flex-btn{
     margin-right: 1rem;
